# ai_workshop

./: .gitignore
apptainer/: Makefile  hello.sbatch  requirements.txt
apptainer/container/: definition.def
apptainer/src/: main.py
llm_inference/: README.md  load_transcripts.ipynb  parse_llm_output.ipynb  rag_search.ipynb  vllmapi_transcript_analysis.ipynb
text_classifier/: .env  Makefile  apptainer.env  pyproject.toml  sherlock.env
text_classifier/container/: text_classifier.def
text_classifier/notebook/: integrated_gradient.ipynb  load_data.ipynb
text_classifier/src/: config.py  inference.py  model.py  train.py
